k8s/test_pub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pub
  template:
    metadata:
      labels:
        app: test-pub
    spec:
      serviceAccountName: iot-service-account
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - name: test-pub
        image: test-pub:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - name: mosquitto-certs
          mountPath: /mosquitto/certs
          readOnly: true
      volumes:
      - name: mosquitto-certs
        secret:
          secretName: mosquitto-certs
