k8s/timescaledb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timescaledb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timescaledb
  template:
    metadata:
      labels:
        app: timescaledb
    spec:
      serviceAccountName: iot-service-account
      containers:
      - name: timescaledb
        image: timescale/timescaledb:latest-pg14
        securityContext:
          runAsUser: 70
          runAsGroup: 70
          runAsNonRoot: true
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: timescaledb-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: timescaledb-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: timescaledb
spec:
  selector:
    app: timescaledb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
